--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,3 +12,12 @@ jobs:
 
       - name: Run Bash script
         run: bash test.sh
+  test-script:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Run Bash script
+        run: bash test1.sh        
