--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,24 +62,38 @@ jobs:
       - name: Print the found email
         run: echo "The email is ${{ steps.test.outputs.email }}"
         
-  Send-mail:
-      needs: [email]
-      runs-on: ubuntu-latest
-      name: Sending email
-      if: always()
-      uses: dawidd6/action-send-mail@v3
-      with:
+ # Send-mail:
+    #needs: [email]
+    #runs-on: ubuntu-latest
+    #name: Sending email
+    #if: always()
+    #uses: ./
+    #with:
     # mail server settings
-      server_address: smtp.gmail.com
-      server_port: 25
+    #  server_address: smtp.gmail.com
+    #  server_port: 25
     # user credentials
-      username: ${{ steps.test.outputs.email }}
+    #  username: ${{ steps.test.outputs.email }}
     #password: ${{ secrets.EMAIL_PASSWORD }}
     # email subject
-      subject: Test ${{ github.job }} execution finished ${{ job.status }}
+    #  subject: Test ${{ github.job }} execution finished ${{ job.status }}
     # email body as text
-      body: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}
+    #  body: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}
     # comma-separated string, send email to
-      to: ${{ steps.test.outputs.email }}
+    #  to: ${{ steps.test.outputs.email }}
     # from email name
-      from: ${{ steps.test.outputs.email }}        
+    #  from: ${{ steps.test.outputs.email }}
+  url-test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Send mail
+        uses: ./
+        with:
+          connection_url: smtp+starttls://${{secrets.USERNAME}}:${{secrets.PASSWORD}}@${{secrets.ADDRESS}}/
+          subject: Plain body with connection_url
+          body: |
+            ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}
+          to: ${{github.event.pusher.email}}
+          from: github-actions      
